--- a/lab5/estilos.css
+++ b/lab5/estilos.css
@@ -6,11 +6,240 @@ h1 {
   font-family: "Indie Flower", cursive;
 }
 
+body{
+  margin:0;
+}
+
+/* ---------------- LETTERS TEXT FIRST IMAGE ----------------- */
+
 .typeLetter {
   font-family: "PT Serif", serif;
   font-size: 50px;
   margin-top: 15vh;
 }
+
+/* ---------------- Animações ----------------- */
+
+.animacoes{
+  display: grid;
+  grid-template-areas: 
+    'fotoAnimacoes1 fotoAnimacoes2'
+    'fotoAnimacoes3 fotoAnimacoes4';
+  justify-content: center;
+
+}
+
+.fotoAnimacoes1{
+  width: 100px;
+  height: 100px;
+  animation-name: exempl1;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  grid-area: fotoAnimacoes1;
+}
+
+.fotoAnimacoes2 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation-name: example2;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  grid-area: fotoAnimacoes2;
+}
+
+.fotoAnimacoes3 {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  animation-name: exemplo3;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  grid-area: fotoAnimacoes3;
+}
+
+.fotoAnimacoes4 {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  animation-name: exemplo4;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  grid-area: fotoAnimacoes4;
+}
+
+@keyframes exempl1 {
+  from {
+    background-color: rgb(255, 145, 0);
+  }
+
+  to {
+    background-color: rgb(255, 230, 0);
+  }
+}
+
+@keyframes example2 {
+  0% {
+    background-color: rgb(255, 145, 0);
+    left: 0px;
+    top: 0px;
+  }
+  
+  50% {
+    background-color: rgb(255, 230, 0);
+    left: 200px;
+    top: 0px;
+  }
+
+  100% {
+    background-color: rgb(255, 230, 0);
+    left: 0px;
+    top: 0px;
+  }
+}
+
+@keyframes exemplo3 {
+  0% {
+    background-color: rgb(255, 145, 0);
+    left: 0px;
+    top: 0px;
+  }
+
+  50% {
+    background-color: rgb(255, 230, 0);
+    left: 0px;
+    top: 200px;
+  }
+
+  100% {
+    background-color: rgb(255, 230, 0);
+    left: 0px;
+    top: 0px;
+  }
+}
+
+@keyframes exemplo4 {
+  0% {
+    background-color: rgb(255, 145, 0);
+    left: 0px;
+    top: 0px;
+  }
+
+  50% {
+    background-color: rgb(255, 230, 0);
+    left: 200px;
+    top: 200px;
+  }
+  
+  100% {
+    background-color: rgb(255, 230, 0);
+    left: 0px;
+    top: 0px;
+  }
+}
+
+/* ---------------- PARALLAX ----------------- */
+
+.parallax {
+  background-image: url(images/beach_parallax.jpg);
+  min-height: 30vh;
+  width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax2 {
+  background-color: white;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.parallax2 p {
+  font-size: 18px;
+  text-align: center;
+}
+
+/* ---------------- FOTOS ----------------- */
+
+.fotos {
+  display: grid;
+  grid-template-areas: 
+      'foto1 foto2 foto3'
+      'foto4 foto5 foto6'
+      'foto7 foto8 foto9'
+      'foto10 foto11 foto12';
+  justify-content: center;
+  align-items: center;
+  gap: 1vw;
+  margin: 0 10vw;
+}
+
+.foto1 {
+  max-width: 100%;
+  grid-area: foto1;
+}
+
+.foto2 {
+  max-width: 100%;
+  grid-area: foto2;
+}
+
+.foto3 {
+  max-width: 100%;
+  grid-area: foto3;
+}
+
+.foto4 {
+  max-width: 100%;
+  grid-area: foto4;
+}
+
+.foto5 {
+  max-width: 100%;
+  grid-area: foto5;
+}
+
+.foto6 {
+  max-width: 100%;
+  grid-area: foto6;
+}
+
+.foto7 {
+  max-width: 100%;
+  grid-area: foto7;
+}
+
+.foto8 {
+  max-width: 100%;
+  grid-area: foto8;
+}
+
+.foto9 {
+  max-width: 100%;
+  grid-area: foto9;
+}
+
+.foto10 {
+  max-width: 100%;
+  grid-area: foto10;
+}
+
+.foto11 {
+  max-width: 100%;
+  grid-area: foto11;
+}
+
+.foto12 {
+  max-width: 100%;
+  grid-area: foto12;
+}
+
+
+/* ---------------- CAPITAIS ----------------- */
 
 .capitais {
   background-color: rgb(163, 218, 255);
@@ -48,11 +277,17 @@ h1 {
   text-align: right;
 }
 
+/* ---------------- MENU TOPBAR ----------------- */
+
 .menu {
   display: flex;
   position: sticky;
   background: white;
   top: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  z-index: 999;
 }
 
 .menu a:last-child {
@@ -77,6 +312,8 @@ a:hover {
   align-items: center;
 }
 
+/* ---------------- FIRST IMAGE PAGE ----------------- */
+
 .backImage {
   display: flex;
   background-image: url(images/predios.jpg);
@@ -85,7 +322,10 @@ a:hover {
   height: 90vh;
   color: white;
   background-repeat: no-repeat;
+  background-size: cover;
 }
+
+/* ---------------- DICAS ----------------- */
 
 .dicas {
   display: flex;
@@ -118,6 +358,8 @@ a:hover {
   margin: 6px;
 }
 
+/* ---------------- DESTINOS ----------------- */
+
 .destinos {
   display: grid;
   grid-template-areas:
@@ -132,6 +374,8 @@ a:hover {
   margin-top: 30px;
   justify-content: center;
 }
+
+/* ---------------- GRIDWHITE ----------------- */
 
 .gridWhite {
   display: grid;
@@ -165,6 +409,8 @@ a:hover {
   grid-area: botao;
 }
 
+/* ---------------- ABSOLUTE E RELATIVE ----------------- */
+
 .relative {
   position: relative;
   left: 5%;
@@ -180,6 +426,8 @@ a:hover {
   color: white;
   font-size: 20px;
 }
+
+/* ---------------- VARIOS DESTINOS ----------------- */
 
 .ericeira {
   background-image: url(images/ericeira.jpg);
@@ -226,6 +474,8 @@ a:hover {
   grid-area: porto;
 }
 
+/* ---------------- MEDIA QUERYS ----------------- */
+
 @media (max-width: 1399px) {
   .destinos {
     display: grid;
@@ -262,9 +512,24 @@ a:hover {
   .gridWhite {
     justify-self: center;
   }
+
+  .fotos{
+    display: grid;
+    grid-template-areas: 
+      'foto1 foto2'
+      'foto3 foto4'
+      'foto5 foto6'
+      'foto7 foto8'
+      'foto9 foto10'
+      'foto11 foto12';
+      justify-content: center;
+      align-items: center;
+      gap: 1vw;
+      margin: 0 10vw;
+  }
 }
 
-@media (max-width: 645px) {
+@media (max-width: 620px) {
   .destinos {
     grid-template-areas:
       "ericeira"
@@ -309,5 +574,26 @@ a:hover {
     height: 50px;
     width: 100px;
     grid-area: botao;
+  }
+
+  .fotos {
+    display: grid;
+    grid-template-areas:
+      'foto1'
+      'foto2'
+      'foto3'
+      'foto4'
+      'foto5'
+      'foto6'
+      'foto7'
+      'foto8'
+      'foto9'
+      'foto10'
+      'foto11'
+      'foto12';
+    justify-content: center;
+    align-items: center;
+    gap: 1vw;
+    margin: 0 10vw;
   }
 }
